--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="UTF-8">
-		<title>Siyi Chen(sc2778), Lini Tan(lt398), Hao Rong(hr335), Cassie Wang(yw775)</title>
+		<title>Panda Diplomacy</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="javascriptlibrary/jquery-3.2.1.min.js"></script>
 		<script src="javascriptlibrary/d3.v4.min.js"></script>
